Adding CI for checkstyle and jacoco

--- a/build.gradle
+++ b/build.gradle
@@ -28,3 +28,10 @@ test {
 run {
     standardInput = System.in
 }
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        html.enabled true
+    }
+}
