--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,3 +19,9 @@ jobs:
       run: chmod +x gradlew
     - name: Test with Gradle
       run: ./gradlew test
+    - name: Checkstyle
+      run: ./gradlew checkstyleMain
+    - name: Code coverage rapost
+      run: ./gradlew jacocoTestReport
+    - name: Data to codecov
+      run: bash <(curl -s https://codecov.io/bash)
