--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -3,7 +3,9 @@ name: Java CI with Gradle
 on:
   push:
     branches: [ main ]
-
+  pull_request:
+    branches: [ main ]
+    
 jobs:
   run_tests:
 
