--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ dependencies {
     implementation group: 'io.cucumber', name: 'cucumber-java', version: '7.0.0'
     testImplementation group: 'io.cucumber', name: 'cucumber-junit', version: '7.0.0'
     testImplementation 'junit:junit:4.13.2'
+    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.36.0.3'
+
 }
 
 test {
