--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,17 @@ application {
     mainClass = 'bestreads.main.Main'
 }
 
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'bestreads.main.Main'
+        )
+    }
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
+
 repositories {
     mavenCentral()
 }
