--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     testImplementation group: 'io.cucumber', name: 'cucumber-junit', version: '7.0.0'
     testImplementation 'junit:junit:4.13.2'
     implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.36.0.3'
+    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+
     compile 'com.jakewharton.fliptables:fliptables:1.1.0'
 }
 
