--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,7 @@ dependencies {
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
     implementation 'com.google.code.gson:gson:2.8.6'
 
-
-    compile 'com.jakewharton.fliptables:fliptables:1.1.0'
+    compile 'com.github.freva:ascii-table:1.1.0'
 }
 
 test {
@@ -43,7 +42,6 @@ test {
 
 
 run {
-    allJvmArgs = ['-Dsun.stdout.encoding=cp437']
     standardInput = System.in
 }
 
