--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.36.0.3'
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation group: 'com.github.freva', name: 'ascii-table', version: '1.1.0'
+
 
     compile 'com.github.freva:ascii-table:1.1.0'
 }
